Fix use tests